force-app/main/default/objects/Experience__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>IF( ISBLANK( End_Date__c ) , 

 IF( YEAR(TODAY()) - YEAR(Start_Date__c) == 0, &apos;&apos; , TEXT(YEAR(TODAY()) - YEAR(Start_Date__c)) + &apos; years&apos;) +
 
 IF( MONTH(TODAY()) - MONTH(Start_Date__c) == 0, &apos;&apos; , TEXT(MONTH(TODAY()) - MONTH(Start_Date__c)) + &apos;, months&apos;) +

 IF( DAY(TODAY()) - DAY(Start_Date__c) == 0, &apos;&apos; , &apos; and &apos; + TEXT(DAY(TODAY()) - DAY(Start_Date__c)) + &apos; days&apos;) 


, 

 IF( YEAR(End_Date__c) - YEAR(Start_Date__c) == 0, &apos;&apos; , TEXT(YEAR(End_Date__c) - YEAR(Start_Date__c)) + &apos; years&apos;) +
 
 IF( MONTH(End_Date__c) - MONTH(Start_Date__c) == 0, &apos;&apos; , TEXT(MONTH(End_Date__c) - MONTH(Start_Date__c)) + &apos;, months&apos;) +

 IF( DAY(End_Date__c) - DAY(Start_Date__c) == 0, &apos;&apos; , &apos; and &apos; + TEXT(DAY(End_Date__c) - DAY(Start_Date__c)) + &apos; days&apos;) )</formula>
    <label>Duration</label>
    <type>Text</type>
</CustomField>