force-app/main/default/objects/Experience__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Optional field to show where you did the particular work</description>
    <inlineHelpText>Optional field to show where you did the particular work</inlineHelpText>
    <label>Location</label>
    <type>Address</type>
</CustomField>