force-app/main/default/objects/Experience__c/recordTypes/Work_Experience.recordType-meta.xml
<RecordType>
    <fullName>Work_Experience</fullName>
    <active>true</active>
    <label>Work Experience</label>
</RecordType>